# midi_router

./: .clang-format  CMakeLists.txt  MIDIExecutor.cpp  MIDIExecutor.h  filters.cpp  filters.h  log.cpp  log.h  main.cpp  midi-router.service
